@@ -1,3 +1,8 @@
+Thu Feb 23 19:20:25 CET 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/main-window.c:
+	  - Avoid to set a empty title on the main window.
+
 Wed Feb 22 15:45:44 MST 2006  Sven Stothoff <sven.strothoff@speicherland.com>
 
 	* src/common/servlist.c:
